clicking on song in library now adds it to queue properly

--- a/client/index.html
+++ b/client/index.html
@@ -17,13 +17,16 @@
     <script src="views/PlayerView.js"></script>
     <script src="views/LibraryView.js"></script>
     <script src="views/LibraryEntryView.js"></script>
+    <script src="views/SongQueueView.js"></script>
+    <script src="views/SongQueueEntryView.js"></script>
     <script src="views/AppView.js"></script>
-
     <script>
       // $(function(){
         // set up model objects
         var library = new Songs(songData);
+        var songQueue = new SongQueue(queueData);
         var app = new App({library: library});
+        app.set('songQueue', songQueue);
 
         // build a view for the top level of the whole app
         var appView = new AppView({model: app});
