--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
         var library = new Songs(songData);
         var songQueue = new SongQueue(queueData);
         var app = new App({library: library});
-        app.set('songQueue', songQueue);
+        // app.set('songQueue', songQueue);
 
         // build a view for the top level of the whole app
         var appView = new AppView({model: app});
