added now playing view

--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
     <script src="views/LibraryEntryView.js"></script>
     <script src="views/SongQueueView.js"></script>
     <script src="views/SongQueueEntryView.js"></script>
+    <script src="views/NowPlayingView.js"></script>
     <script src="views/AppView.js"></script>
     <script>
       // $(function(){
